--- a/apache_spark/thesis/thesis.tex
+++ b/apache_spark/thesis/thesis.tex
@@ -149,8 +149,8 @@
 \betreuerFeld{
   \begin{tabular}{llr}
     
-    \textbf{1. Betreuer} & Herr~Prof.~Dr.~Edlich & Beuth Hochschule für Technik\\
-    \textbf{2. Betreuer} & Herr~Prof.~Dr. Schiemann-Lillie & Hochschule Emden-Leer
+    \textbf{1. Betreuer} & Prof.~Dr.~Stefan~Edlich & Beuth Hochschule für Technik\\
+    \textbf{2. Betreuer} & Prof.~Dr. Schiemann-Lillie & Hochschule Emden-Leer
   \end{tabular}
 }
 
@@ -176,7 +176,12 @@
 
 \input{einfuehrung.tex}
 \input{grundlagen.tex}
+\input{bdas.tex}
 \input{funktionsweise.tex}
+\input{architektur.tex}
+\input{prototypen.tex}
+\input{evaluierung.tex}
+\input{schlussbetrachtung.tex}
 
 
 
