--- a/apache_spark/thesis/grundlagen.tex
+++ b/apache_spark/thesis/grundlagen.tex
@@ -7,39 +7,47 @@ Das nachfolgende Kapitel behandelt die Grundlagen, die für ein Verständnis der
 \section{Cluster Computing}
 \label{section:cluster computing}
 
-Blablba
+Die Nachfrage nach immer mehr Rechenleistung hat in dein letzten Jahren dazu geführt, dass verstärkt Rechnercluster eingesetzt werden. Alternativ gibt es den Ansatz, Mainframes\footnote{Unter Mainframe wird hier ein sehr leistungsfähiges Rechnersystem verstanden, das einen oder  beliebig viele Prozessoren in einer physischen Einheit, also einem logischen Mainboard verbindet. } mit immer mehr Rechenleistung auszustatten, diese jedoch ausdrücklich autonom zu betreiben\footnote{In diesem Kontext kann durchaus ein Failover-Cluster vorhanden sein, also eine Mainframe wird zur Ausfallsicherheit repliziert. Dies wird hier jedoch nicht als Cluster im eigentlichen Sinn bezeichnet.}. Je nach Aufgabenspektrum ist die eine oder andere Art besser geeignet. In der Regel wird ein geclustertes System dort eingesetzt, wo hohe Verfügbarkeit oder gut parallelisierbare Aufgaben vorherrschen. Bei netzwerkintensiven Aufgaben, wie z.B. als Webserver oder Datenbanksystem sollten besser Installationen auf einem autonomen System eingesetzt werden \citelit{clus1}.   
 
+Ein Rechner-Cluster besteht in der Regel aus mehr oder weniger eng miteinander verbundenen Computern, wobei hier im Gegensatz zu Mainframes jeder Rechner über eigene Ressourcen wie Hauptspeicher, Massenspeicher, etc. verfügt. Ein Cluster, bzw. ein Verteiltes System ist nach Andrew S. Tanenbaum \citelit{tan1} folgendermaßen definert: 
+
+\enquote{A distributed system is a collection of independent computers that appears to its users as a single coherent system.}
+
+Dies be
+
+
+ 
 \section{Statistikanwendungen}
-\label{section:cluster computing}
+\label{section:statstikanwendungen}
 
 Blablba
 
 \subsection{Log Analysen}
-\label{section:cluster computing}
+\label{section:log analysen}
 
 Blablba
 
 \subsection{Messreihen}
-\label{section:cluster computing}
+\label{section:messreihen}
 
 Blablba
 
 \section{Machine Learning}
-\label{section:cluster computing}
+\label{section:machine learning}
 
 Blablba
 
 \subsection{Vorhersagealgorithmen}
-\label{section:cluster computing}
+\label{section:vorhersagealgorithmen}
 
 Blablba
 
 \section{Streaming Frameworks}
-\label{section:cluster computing}
+\label{section:streaming framworks}
 
 Blablba
 
 \section{Anwendungen von Graphen}
-\label{section:cluster computing}
+\label{section:anwendungen von graphen}
 
 Blablba
