--- a/apache_spark/thesis/literaturVerzeichnis.bib
+++ b/apache_spark/thesis/literaturVerzeichnis.bib
@@ -1,12 +1,29 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sascha Patrick Lorenz at 2014-12-13 15:22:45 +0100 
+%% Created for Sascha Patrick Lorenz at 2014-12-26 21:10:11 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{tan1,
+	Author = {Andrew S. Tanenbaum, Maarten van Steen},
+	Date-Added = {2014-12-26 20:07:27 +0000},
+	Date-Modified = {2014-12-26 20:10:11 +0000},
+	Edition = {Second Edition},
+	Publisher = {Pearson, Prentice Hall},
+	Title = {Distributed Systems - Principles and Paradigms},
+	Year = {2007}}
+
+@book{clus1,
+	Author = {Thomas Rauber, Gudula R{\"u}nger},
+	Date-Added = {2014-12-26 19:33:08 +0000},
+	Date-Modified = {2014-12-26 19:35:56 +0000},
+	Publisher = {Springer},
+	Title = {Parallel Programming: For Multicore and Cluster Systems},
+	Year = {2010}}
 
 @book{nrc13,
 	Author = {National Research Council},
